:white_check_mark: Fix scrollbars for home and albums page

--- a/templates/public/css/main.css
+++ b/templates/public/css/main.css
@@ -4,7 +4,6 @@ body{
     color: 	#ffffff;
     background-color: #26262b;
     align-content: center;
-    overflow: hidden;
 }
 
 h1{
